michal_radwanski/src/generated/ParCerber.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParCerber.y
-----------------------------------------------------------------------------

state 137 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> Type Ident ';'                           (6)
	ListTopDef -> TopDef                               (7)
	ListTopDef -> TopDef ListTopDef                    (8)
	Arg1 -> Type Ident                                 (9)
	Arg1 -> Arg2                                       (10)
	Arg2 -> Type 'ref' Ident                           (11)
	Arg2 -> '(' Arg ')'                                (12)
	Arg -> Arg1                                        (13)
	ListArg ->                                         (14)
	ListArg -> Arg                                     (15)
	ListArg -> Arg ',' ListArg                         (16)
	Block -> '{' ListStmt '}'                          (17)
	ListStmt ->                                        (18)
	ListStmt -> Stmt ListStmt                          (19)
	Stmt -> ';'                                        (20)
	Stmt -> Block                                      (21)
	Stmt -> Type ListItem ';'                          (22)
	Stmt -> Ident '=' Expr ';'                         (23)
	Stmt -> Expr ':=' Expr ';'                         (24)
	Stmt -> 'return' Expr ';'                          (25)
	Stmt -> 'return' ';'                               (26)
	Stmt -> 'if' '(' Expr ')' Stmt                     (27)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (28)
	Stmt -> Expr ';'                                   (29)
	Stmt -> 'break' ';'                                (30)
	Stmt -> 'continue' ';'                             (31)
	Stmt -> 'while' '(' Expr ')' Stmt                  (32)
	Item -> Ident                                      (33)
	Item -> Ident '=' Expr                             (34)
	ListItem -> Item                                   (35)
	ListItem -> Item ',' ListItem                      (36)
	Type -> 'int'                                      (37)
	Type -> 'string'                                   (38)
	Type -> 'boolean'                                  (39)
	Type -> 'void'                                     (40)
	Type -> 'generator' '<' Type '>'                   (41)
	Type -> 'tuple' '<' ListType '>'                   (42)
	Type -> 'function' '<' ListType '>'                (43)
	ListType ->                                        (44)
	ListType -> Type                                   (45)
	ListType -> Type ',' ListType                      (46)
	Expr6 -> Ident                                     (47)
	Expr6 -> Integer                                   (48)
	Expr6 -> 'true'                                    (49)
	Expr6 -> 'false'                                   (50)
	Expr6 -> Expr6 '(' ListExpr ')'                    (51)
	Expr6 -> String                                    (52)
	Expr6 -> Expr7                                     (53)
	Expr5 -> '-' Expr6                                 (54)
	Expr5 -> '!' Expr6                                 (55)
	Expr5 -> Expr6                                     (56)
	Expr4 -> Expr4 MulOp Expr5                         (57)
	Expr4 -> Expr5                                     (58)
	Expr3 -> Expr3 AddOp Expr4                         (59)
	Expr3 -> Expr4                                     (60)
	Expr2 -> Expr2 RelOp Expr3                         (61)
	Expr2 -> Expr3                                     (62)
	Expr1 -> Expr2 '&&' Expr1                          (63)
	Expr1 -> Expr2                                     (64)
	Expr -> Expr1 '||' Expr                            (65)
	Expr -> Expr1                                      (66)
	Expr7 -> '[' ListExpr ']'                          (67)
	Expr7 -> '(' Expr ')'                              (68)
	ListExpr ->                                        (69)
	ListExpr -> Expr                                   (70)
	ListExpr -> Expr ',' ListExpr                      (71)
	AddOp -> '+'                                       (72)
	AddOp -> '-'                                       (73)
	MulOp -> '*'                                       (74)
	MulOp -> '/'                                       (75)
	MulOp -> '%'                                       (76)
	RelOp -> '<'                                       (77)
	RelOp -> '<='                                      (78)
	RelOp -> '>'                                       (79)
	RelOp -> '>='                                      (80)
	RelOp -> '=='                                      (81)
	RelOp -> '!='                                      (82)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	':='           { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'boolean'      { PT _ (TS _ 22) }
	'break'        { PT _ (TS _ 23) }
	'continue'     { PT _ (TS _ 24) }
	'else'         { PT _ (TS _ 25) }
	'false'        { PT _ (TS _ 26) }
	'function'     { PT _ (TS _ 27) }
	'generator'    { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'ref'          { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'string'       { PT _ (TS _ 33) }
	'true'         { PT _ (TS _ 34) }
	'tuple'        { PT _ (TS _ 35) }
	'void'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	ListTopDef      rules 7, 8
	Arg1            rules 9, 10
	Arg2            rules 11, 12
	Arg             rule  13
	ListArg         rules 14, 15, 16
	Block           rule  17
	ListStmt        rules 18, 19
	Stmt            rules 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	Item            rules 33, 34
	ListItem        rules 35, 36
	Type            rules 37, 38, 39, 40, 41, 42, 43
	ListType        rules 44, 45, 46
	Expr6           rules 47, 48, 49, 50, 51, 52, 53
	Expr5           rules 54, 55, 56
	Expr4           rules 57, 58
	Expr3           rules 59, 60
	Expr2           rules 61, 62
	Expr1           rules 63, 64
	Expr            rules 65, 66
	Expr7           rules 67, 68
	ListExpr        rules 69, 70, 71
	AddOp           rules 72, 73
	MulOp           rules 74, 75, 76
	RelOp           rules 77, 78, 79, 80, 81, 82

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	':='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 7)
	ListTopDef -> TopDef . ListTopDef                   (rule 8)

	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13
	%eof           reduce using rule 7

	TopDef         goto state 4
	ListTopDef     goto state 18
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	TopDef -> Type . Ident ';'                          (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 17

State 7

	Type -> 'boolean' .                                 (rule 39)

	','            reduce using rule 39
	'>'            reduce using rule 39
	'ref'          reduce using rule 39
	L_Ident        reduce using rule 39


State 8

	Type -> 'function' . '<' ListType '>'               (rule 43)

	'<'            shift, and enter state 16


State 9

	Type -> 'generator' . '<' Type '>'                  (rule 41)

	'<'            shift, and enter state 15


State 10

	Type -> 'int' .                                     (rule 37)

	','            reduce using rule 37
	'>'            reduce using rule 37
	'ref'          reduce using rule 37
	L_Ident        reduce using rule 37


State 11

	Type -> 'string' .                                  (rule 38)

	','            reduce using rule 38
	'>'            reduce using rule 38
	'ref'          reduce using rule 38
	L_Ident        reduce using rule 38


State 12

	Type -> 'tuple' . '<' ListType '>'                  (rule 42)

	'<'            shift, and enter state 14


State 13

	Type -> 'void' .                                    (rule 40)

	','            reduce using rule 40
	'>'            reduce using rule 40
	'ref'          reduce using rule 40
	L_Ident        reduce using rule 40


State 14

	Type -> 'tuple' '<' . ListType '>'                  (rule 42)

	'>'            reduce using rule 44
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Type           goto state 21
	ListType       goto state 24

State 15

	Type -> 'generator' '<' . Type '>'                  (rule 41)

	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Type           goto state 23

State 16

	Type -> 'function' '<' . ListType '>'               (rule 43)

	'>'            reduce using rule 44
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Type           goto state 21
	ListType       goto state 22

State 17

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)
	TopDef -> Type Ident . ';'                          (rule 6)

	'('            shift, and enter state 19
	';'            shift, and enter state 20


State 18

	ListTopDef -> TopDef ListTopDef .                   (rule 8)

	%eof           reduce using rule 8


State 19

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	'('            shift, and enter state 34
	')'            reduce using rule 14
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Arg1           goto state 29
	Arg2           goto state 30
	Arg            goto state 31
	ListArg        goto state 32
	Type           goto state 33

State 20

	TopDef -> Type Ident ';' .                          (rule 6)

	'boolean'      reduce using rule 6
	'function'     reduce using rule 6
	'generator'    reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'tuple'        reduce using rule 6
	'void'         reduce using rule 6
	%eof           reduce using rule 6


State 21

	ListType -> Type .                                  (rule 45)
	ListType -> Type . ',' ListType                     (rule 46)

	','            shift, and enter state 28
	'>'            reduce using rule 45


State 22

	Type -> 'function' '<' ListType . '>'               (rule 43)

	'>'            shift, and enter state 27


State 23

	Type -> 'generator' '<' Type . '>'                  (rule 41)

	'>'            shift, and enter state 26


State 24

	Type -> 'tuple' '<' ListType . '>'                  (rule 42)

	'>'            shift, and enter state 25


State 25

	Type -> 'tuple' '<' ListType '>' .                  (rule 42)

	','            reduce using rule 42
	'>'            reduce using rule 42
	'ref'          reduce using rule 42
	L_Ident        reduce using rule 42


State 26

	Type -> 'generator' '<' Type '>' .                  (rule 41)

	','            reduce using rule 41
	'>'            reduce using rule 41
	'ref'          reduce using rule 41
	L_Ident        reduce using rule 41


State 27

	Type -> 'function' '<' ListType '>' .               (rule 43)

	','            reduce using rule 43
	'>'            reduce using rule 43
	'ref'          reduce using rule 43
	L_Ident        reduce using rule 43


State 28

	ListType -> Type ',' . ListType                     (rule 46)

	'>'            reduce using rule 44
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Type           goto state 21
	ListType       goto state 40

State 29

	Arg -> Arg1 .                                       (rule 13)

	')'            reduce using rule 13
	','            reduce using rule 13


State 30

	Arg1 -> Arg2 .                                      (rule 10)

	')'            reduce using rule 10
	','            reduce using rule 10


State 31

	ListArg -> Arg .                                    (rule 15)
	ListArg -> Arg . ',' ListArg                        (rule 16)

	')'            reduce using rule 15
	','            shift, and enter state 39


State 32

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 38


State 33

	Arg1 -> Type . Ident                                (rule 9)
	Arg2 -> Type . 'ref' Ident                          (rule 11)

	'ref'          shift, and enter state 37
	L_Ident        shift, and enter state 2

	Ident          goto state 36

State 34

	Arg2 -> '(' . Arg ')'                               (rule 12)

	'('            shift, and enter state 34
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Arg1           goto state 29
	Arg2           goto state 30
	Arg            goto state 35
	Type           goto state 33

State 35

	Arg2 -> '(' Arg . ')'                               (rule 12)

	')'            shift, and enter state 45


State 36

	Arg1 -> Type Ident .                                (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 37

	Arg2 -> Type 'ref' . Ident                          (rule 11)

	L_Ident        shift, and enter state 2

	Ident          goto state 44

State 38

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 43

	Block          goto state 42

State 39

	ListArg -> Arg ',' . ListArg                        (rule 16)

	'('            shift, and enter state 34
	')'            reduce using rule 14
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Arg1           goto state 29
	Arg2           goto state 30
	Arg            goto state 31
	ListArg        goto state 41
	Type           goto state 33

State 40

	ListType -> Type ',' ListType .                     (rule 46)

	'>'            reduce using rule 46


State 41

	ListArg -> Arg ',' ListArg .                        (rule 16)

	')'            reduce using rule 16


State 42

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'function'     reduce using rule 5
	'generator'    reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'tuple'        reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5


State 43

	Block -> '{' . ListStmt '}'                         (rule 17)

	'!'            shift, and enter state 61
	'('            shift, and enter state 62
	'-'            shift, and enter state 63
	';'            shift, and enter state 64
	'['            shift, and enter state 65
	'boolean'      shift, and enter state 7
	'break'        shift, and enter state 66
	'continue'     shift, and enter state 67
	'false'        shift, and enter state 68
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'if'           shift, and enter state 69
	'int'          shift, and enter state 10
	'return'       shift, and enter state 70
	'string'       shift, and enter state 11
	'true'         shift, and enter state 71
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13
	'while'        shift, and enter state 72
	'{'            shift, and enter state 43
	'}'            reduce using rule 18
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74

	Ident          goto state 46
	Integer        goto state 47
	String         goto state 48
	Block          goto state 49
	ListStmt       goto state 50
	Stmt           goto state 51
	Type           goto state 52
	Expr6          goto state 53
	Expr5          goto state 54
	Expr4          goto state 55
	Expr3          goto state 56
	Expr2          goto state 57
	Expr1          goto state 58
	Expr           goto state 59
	Expr7          goto state 60

State 44

	Arg2 -> Type 'ref' Ident .                          (rule 11)

	')'            reduce using rule 11
	','            reduce using rule 11


State 45

	Arg2 -> '(' Arg ')' .                               (rule 12)

	')'            reduce using rule 12
	','            reduce using rule 12


State 46

	Stmt -> Ident . '=' Expr ';'                        (rule 23)
	Expr6 -> Ident .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'('            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	':='           reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            shift, and enter state 111
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47


State 47

	Expr6 -> Integer .                                  (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	':='           reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	']'            reduce using rule 48
	'||'           reduce using rule 48


State 48

	Expr6 -> String .                                   (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	'('            reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	':='           reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'||'           reduce using rule 52


State 49

	Stmt -> Block .                                     (rule 21)

	'!'            reduce using rule 21
	'('            reduce using rule 21
	'-'            reduce using rule 21
	';'            reduce using rule 21
	'['            reduce using rule 21
	'boolean'      reduce using rule 21
	'break'        reduce using rule 21
	'continue'     reduce using rule 21
	'else'         reduce using rule 21
	'false'        reduce using rule 21
	'function'     reduce using rule 21
	'generator'    reduce using rule 21
	'if'           reduce using rule 21
	'int'          reduce using rule 21
	'return'       reduce using rule 21
	'string'       reduce using rule 21
	'true'         reduce using rule 21
	'tuple'        reduce using rule 21
	'void'         reduce using rule 21
	'while'        reduce using rule 21
	'{'            reduce using rule 21
	'}'            reduce using rule 21
	L_Ident        reduce using rule 21
	L_integ        reduce using rule 21
	L_quoted       reduce using rule 21


State 50

	Block -> '{' ListStmt . '}'                         (rule 17)

	'}'            shift, and enter state 110


State 51

	ListStmt -> Stmt . ListStmt                         (rule 19)

	'!'            shift, and enter state 61
	'('            shift, and enter state 62
	'-'            shift, and enter state 63
	';'            shift, and enter state 64
	'['            shift, and enter state 65
	'boolean'      shift, and enter state 7
	'break'        shift, and enter state 66
	'continue'     shift, and enter state 67
	'false'        shift, and enter state 68
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'if'           shift, and enter state 69
	'int'          shift, and enter state 10
	'return'       shift, and enter state 70
	'string'       shift, and enter state 11
	'true'         shift, and enter state 71
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13
	'while'        shift, and enter state 72
	'{'            shift, and enter state 43
	'}'            reduce using rule 18
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74

	Ident          goto state 46
	Integer        goto state 47
	String         goto state 48
	Block          goto state 49
	ListStmt       goto state 109
	Stmt           goto state 51
	Type           goto state 52
	Expr6          goto state 53
	Expr5          goto state 54
	Expr4          goto state 55
	Expr3          goto state 56
	Expr2          goto state 57
	Expr1          goto state 58
	Expr           goto state 59
	Expr7          goto state 60

State 52

	Stmt -> Type . ListItem ';'                         (rule 22)

	L_Ident        shift, and enter state 2

	Ident          goto state 106
	Item           goto state 107
	ListItem       goto state 108

State 53

	Expr6 -> Expr6 . '(' ListExpr ')'                   (rule 51)
	Expr5 -> Expr6 .                                    (rule 56)

	'!='           reduce using rule 56
	'%'            reduce using rule 56
	'&&'           reduce using rule 56
	'('            shift, and enter state 105
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            reduce using rule 56
	':='           reduce using rule 56
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	']'            reduce using rule 56
	'||'           reduce using rule 56


State 54

	Expr4 -> Expr5 .                                    (rule 58)

	'!='           reduce using rule 58
	'%'            reduce using rule 58
	'&&'           reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'/'            reduce using rule 58
	':='           reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	']'            reduce using rule 58
	'||'           reduce using rule 58


State 55

	Expr4 -> Expr4 . MulOp Expr5                        (rule 57)
	Expr3 -> Expr4 .                                    (rule 60)

	'!='           reduce using rule 60
	'%'            shift, and enter state 102
	'&&'           reduce using rule 60
	')'            reduce using rule 60
	'*'            shift, and enter state 103
	'+'            reduce using rule 60
	','            reduce using rule 60
	'-'            reduce using rule 60
	'/'            shift, and enter state 104
	':='           reduce using rule 60
	';'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'=='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	']'            reduce using rule 60
	'||'           reduce using rule 60

	MulOp          goto state 101

State 56

	Expr3 -> Expr3 . AddOp Expr4                        (rule 59)
	Expr2 -> Expr3 .                                    (rule 62)

	'!='           reduce using rule 62
	'&&'           reduce using rule 62
	')'            reduce using rule 62
	'+'            shift, and enter state 99
	','            reduce using rule 62
	'-'            shift, and enter state 100
	':='           reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'<='           reduce using rule 62
	'=='           reduce using rule 62
	'>'            reduce using rule 62
	'>='           reduce using rule 62
	']'            reduce using rule 62
	'||'           reduce using rule 62

	AddOp          goto state 98

State 57

	Expr2 -> Expr2 . RelOp Expr3                        (rule 61)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 63)
	Expr1 -> Expr2 .                                    (rule 64)

	'!='           shift, and enter state 91
	'&&'           shift, and enter state 92
	')'            reduce using rule 64
	','            reduce using rule 64
	':='           reduce using rule 64
	';'            reduce using rule 64
	'<'            shift, and enter state 93
	'<='           shift, and enter state 94
	'=='           shift, and enter state 95
	'>'            shift, and enter state 96
	'>='           shift, and enter state 97
	']'            reduce using rule 64
	'||'           reduce using rule 64

	RelOp          goto state 90

State 58

	Expr -> Expr1 . '||' Expr                           (rule 65)
	Expr -> Expr1 .                                     (rule 66)

	')'            reduce using rule 66
	','            reduce using rule 66
	':='           reduce using rule 66
	';'            reduce using rule 66
	']'            reduce using rule 66
	'||'           shift, and enter state 89


State 59

	Stmt -> Expr . ':=' Expr ';'                        (rule 24)
	Stmt -> Expr . ';'                                  (rule 29)

	':='           shift, and enter state 87
	';'            shift, and enter state 88


State 60

	Expr6 -> Expr7 .                                    (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	':='           reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	']'            reduce using rule 53
	'||'           reduce using rule 53


State 61

	Expr5 -> '!' . Expr6                                (rule 55)

	'('            shift, and enter state 62
	'['            shift, and enter state 65
	'false'        shift, and enter state 68
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74

	Ident          goto state 76
	Integer        goto state 47
	String         goto state 48
	Expr6          goto state 86
	Expr7          goto state 60

State 62

	Expr7 -> '(' . Expr ')'                             (rule 68)

	'!'            shift, and enter state 61
	'('            shift, and enter state 62
	'-'            shift, and enter state 63
	'['            shift, and enter state 65
	'false'        shift, and enter state 68
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74

	Ident          goto state 76
	Integer        goto state 47
	String         goto state 48
	Expr6          goto state 53
	Expr5          goto state 54
	Expr4          goto state 55
	Expr3          goto state 56
	Expr2          goto state 57
	Expr1          goto state 58
	Expr           goto state 85
	Expr7          goto state 60

State 63

	Expr5 -> '-' . Expr6                                (rule 54)

	'('            shift, and enter state 62
	'['            shift, and enter state 65
	'false'        shift, and enter state 68
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74

	Ident          goto state 76
	Integer        goto state 47
	String         goto state 48
	Expr6          goto state 84
	Expr7          goto state 60

State 64

	Stmt -> ';' .                                       (rule 20)

	'!'            reduce using rule 20
	'('            reduce using rule 20
	'-'            reduce using rule 20
	';'            reduce using rule 20
	'['            reduce using rule 20
	'boolean'      reduce using rule 20
	'break'        reduce using rule 20
	'continue'     reduce using rule 20
	'else'         reduce using rule 20
	'false'        reduce using rule 20
	'function'     reduce using rule 20
	'generator'    reduce using rule 20
	'if'           reduce using rule 20
	'int'          reduce using rule 20
	'return'       reduce using rule 20
	'string'       reduce using rule 20
	'true'         reduce using rule 20
	'tuple'        reduce using rule 20
	'void'         reduce using rule 20
	'while'        reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	L_Ident        reduce using rule 20
	L_integ        reduce using rule 20
	L_quoted       reduce using rule 20


State 65

	Expr7 -> '[' . ListExpr ']'                         (rule 67)

	'!'            shift, and enter state 61
	'('            shift, and enter state 62
	'-'            shift, and enter state 63
	'['            shift, and enter state 65
	']'            reduce using rule 69
	'false'        shift, and enter state 68
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74

	Ident          goto state 76
	Integer        goto state 47
	String         goto state 48
	Expr6          goto state 53
	Expr5          goto state 54
	Expr4          goto state 55
	Expr3          goto state 56
	Expr2          goto state 57
	Expr1          goto state 58
	Expr           goto state 82
	Expr7          goto state 60
	ListExpr       goto state 83

State 66

	Stmt -> 'break' . ';'                               (rule 30)

	';'            shift, and enter state 81


State 67

	Stmt -> 'continue' . ';'                            (rule 31)

	';'            shift, and enter state 80


State 68

	Expr6 -> 'false' .                                  (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	'('            reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	':='           reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	']'            reduce using rule 50
	'||'           reduce using rule 50


State 69

	Stmt -> 'if' . '(' Expr ')' Stmt                    (rule 27)
	Stmt -> 'if' . '(' Expr ')' Stmt 'else' Stmt        (rule 28)

	'('            shift, and enter state 79


State 70

	Stmt -> 'return' . Expr ';'                         (rule 25)
	Stmt -> 'return' . ';'                              (rule 26)

	'!'            shift, and enter state 61
	'('            shift, and enter state 62
	'-'            shift, and enter state 63
	';'            shift, and enter state 78
	'['            shift, and enter state 65
	'false'        shift, and enter state 68
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 73
	L_quoted       shift, and enter state 74

	Ident          goto state 76
	Integer        goto state 47
	String         goto state 48
	Expr6          goto state 53
	Expr5          goto state 54
	Expr4          goto state 55
	Expr3          goto state 56
	Expr2          goto state 57
	Expr1          goto state 58
	Expr           goto state 77
	Expr7          goto state 60

State 71

	Expr6 -> 'true' .                                   (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	'('            reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	':='           reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	']'            reduce using rule 49
	'||'           reduce using rule 49


State 72

	Stmt -> 'while' . '(' Expr ')' Stmt                 (rule 32)

	'('            shift, and enter state 75


State 73

	Integer -> L_integ .                                (rule 2)
